Closed
Bug 933091
Opened 12 years ago
Closed 12 years ago
MP3FrameParser is not used.
Categories
(Firefox OS Graveyard :: General, defect)
Firefox OS Graveyard
General
Tracking
(blocking-b2g:1.3+, firefox28 fixed)
People
(Reporter: brsun, Assigned: brsun)
References
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
This is a regression bug. MP3FrameParser is not used after applying attachment 816973 [details] [diff] [review] from bug 831645.
Need to add it back in order to estimate the duration of VBR MP3 files which do not have Xing or VBRI headers.
| Assignee | ||
Updated•12 years ago
|
Keywords: regression
Comment 1•12 years ago
|
||
What's the impact of this bug?
| Assignee | ||
Comment 2•12 years ago
|
||
In short, the playback duration of VBR MP3 might be wrong.
By using MP3FrameParser to parse the whole file, we can get the correct number of total frames of any mp3 file. And the correct duration can be calculated by (Number of Frames) * (Samples Per Frame) / (Sampling Rate). (p.s. although MP3FrameParser can count correct number of total frames, it uses some estimation to calculate the duration btw.)
MP3Extractor calculate the duration by the following information:
- If there is Xing header in the file, calculate it from (Number of Frames) information in Xing header.
- If there is VBRI header in the file, calculate if from (Number of Frames) information in VBRI header.
- Otherwise, calculate it simply by dividing file size with the bitrate information parsed so far.
If we simply use MP3Extractor to calculate duration, the estimated duration of a VBR MP3 file, which doesn't have a Xing or VBRI header, might be wrong if the bitrate changes dramatically. I think MP3FrameParser is designed to overcome this kind of duration problem.
ref. bug 831224
| Assignee | ||
Comment 3•12 years ago
|
||
But many VBR MP3 files have Xing or VBRI headers btw.
Comment 4•12 years ago
|
||
Okay. This is a regression from a 1.3 RTSP feature that affects getting the correct playback duration on certain mp3 files - probably worth blocking on.
blocking-b2g: --- → 1.3?
| Assignee | ||
Comment 5•12 years ago
|
||
Re-enable MP3FrameParser to parse MP3 duration.
Attachment #825115 -
Flags: review?(sotaro.ikeda.g)
Comment 6•12 years ago
|
||
Comment on attachment 825115 [details] [diff] [review]
bug933091_regression_mp3frameparser_is_not_used.patch
Looks good. Code change around Media playback needs to be reviewed by doublec.
Attachment #825115 -
Flags: review?(sotaro.ikeda.g)
Attachment #825115 -
Flags: review?(chris.double)
Attachment #825115 -
Flags: review+
Updated•12 years ago
|
Attachment #825115 -
Flags: review?(chris.double) → review+
| Assignee | ||
Comment 7•12 years ago
|
||
Ready to check-in. Based on attachment 825115 [details] [diff] [review] with additional committing message to note reviewers. The results of attachment 825115 [details] [diff] [review] on the try server are all green: https://tbpl.mozilla.org/?tree=Try&rev=dd22bce26287.
| Assignee | ||
Updated•12 years ago
|
Keywords: checkin-needed
Updated•12 years ago
|
Attachment #825115 -
Attachment is obsolete: true
Comment 8•12 years ago
|
||
Keywords: checkin-needed
Comment 9•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Comment 10•12 years ago
|
||
Setting to 1.3+ for being a regression from the RTSP work for mp3 playback
blocking-b2g: 1.3? → 1.3+
Updated•12 years ago
|
status-firefox28:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•