Bug 933091 - Re-enable MP3FrameParser to parse MP3 duration. r=sotaro, r=doublec